infras/k8s/auth-manifests/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
        - name: portus-secret
      containers:
        - name: auth
          image: portus.nt533uitjiradev.click/taskscheduler/longle2003/auth:v1
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: auth-nodeport-srv
spec:  
  type: ClusterIP
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
