infras/k8s/auth-manifests/auth-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress-srv
  namespace: default
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    konghq.com/methods: GET,POST,PUT,DELETE

spec: 
  ingressClassName: kong
  # tls:
  #   - hosts: 
  #     - www.nt533uitjiradev.click
  #     secretName: ca-ingress-tls
  rules:
    # - host: www.nt533uitjiradev.click
      http:
        paths:
          - path: /api/users/
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port: 
                  number: 4000
